syntax = "proto3";

package bank_requests;

// REQUESTS

message CreateAssetRequest {
    uint64 dummy = 1;
}

message PaymentRequest {
    bytes receiver = 1;
    uint64 asset_id = 2;
    uint64 amount = 3;  
}